# zero2prod

./: .env   Cargo.toml  Dockerfile  Readme.md  spec.yaml
.github/workflows/: main.yml
configuration/: base.yaml
migrations/: 20250822133624_create_subscriptions_table.sql  20250901153438_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
