[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.14"
chrono = "0.4.41"
uuid = { version = "1.18.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.16.1"
resend-rs = "0.16.1"
anyhow = "1.0.99"
rand = { version = "0.9.2", features = ["std_rng"] }



[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.23"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1.21.3"
claims = "0.8.0"
# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released, and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6.5"
serde_json = "1.0.143"
linkify = "0.10.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.